--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "concurrently": "^4.1.0",
     "express": "^4.17.1",
     "mocha": "^6.2.1",
@@ -29,6 +30,7 @@
     "morgan": "^1.9.1",
     "node": "^12.13.0",
     "nodemon": "^1.18.10",
+    "react-bootstrap": "^1.0.0-beta.14",
     "should": "^13.2.3",
     "supertest": "^4.0.2"
   },
