--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
-    "concurrently": "^4.1.0",
+    "concurrently": "^4.1.2",
     "express": "^4.17.1",
-    "mocha": "^6.2.1",
-    "mongoose": "^5.7.1",
+    "jquery": "^3.4.1",
+    "mocha": "^6.2.2",
+    "mongoose": "^5.7.10",
     "morgan": "^1.9.1",
     "node": "^12.13.0",
-    "nodemon": "^1.18.10",
+    "nodemon": "^1.19.4",
+    "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-dom": "^16.11.0",
     "should": "^13.2.3",
     "supertest": "^4.0.2"
   },
